# python.learn

./: AGENTS.md  README.md  \  calendar.py  decorators.py  exercim.py  functions.py  pyproject.toml  scikit-learn.md  variables.py
02_middle/: data_structures.py  decorators.py
POO/: basics.py  exe.basics.py  herencia.py  mro.py
before/_exercices/: exception.py  some.py
before/middle/: algoritms.py
beginner/: task-tracker.py
challenges/: 10-sets.py  11-iteration_master.py  12-vectors.py  13-sort_list.py  14-factorial.py  15-armstrong.py  23-sets.py  30-sort_list.py  31-word_frame.py  32-leap_years.py  4-decimal_to_binay.py  5-remove_characters.py  6-factorial.py  7-armstrong.py  8-mayus.py  9-time_parser.py  area_polygon.py
fastapi/basic_fastapi/: hello.py  pyproject.toml  ruff.toml
fastapi/basic_fastapi/app/: enum.py  main.py  path_parameters.py  query_parameters.py
fastapi/basic_fastapi/app/bodyrequest/: body_request.py
fastapi/basic_fastapi/app/parameters/: path_parameters.py  query_parameters.py
fastapi/basic_fastapi/app/validations/: enum.py
fastapi/user_management/: hello.py  pyproject.toml
fastapi/using_sqlite/: data_base.sqlite  pyproject.toml
hackerrank/: hourglasses.py
others/: eje.py  exercim.py  generators.py
others/basics/: variables.py
poo/basic.poo/: basics.py
poo/herencia/: exec.herencia.py  mro.py
poo/poly/: basic.py
python/: README.md
python/challenges/: 1-fizz_buzz.py  3-reverse_string.py  9-time_parser.py  index.html
python/docs/: scikit-learn.md
roadmapsh/: dsa.py
rust/: README.md
(+8 files in other folders)
