# Config base file
[project]
name = "basic-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.7",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

# Ruff config file in this root location
# ruff.toml

# custom scripts
[project.scripts]
load = "hello:load"
